--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@ body {
 .chart-title {
   font-size: 2rem;
 }
+
+#tooltip {
+  position: absolute;
+  border-radius: 4px;
+  background-color: rgba(59, 155, 158, 0.7);
+  padding: 8px;
+  font-size: 0.8rem;
+  z-index: 99;
+}
